--- a/style.css
+++ b/style.css
@@ -87,10 +87,16 @@ body {
 .content-title {
     font-size: 24px;
     font-weight: 600;
+    margin: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .content-element{
     font-size: 16px;
+    margin: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .skill-element{
@@ -112,7 +118,10 @@ body {
 
 .underline{
     border-bottom: 2px solid rgba(40, 41, 46, 255);
-    margin: 0;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
 }
